prost-unwrap-proto-tests/tests/ui/with_enum_no_ident.stderr
error: Parameter must have 1 argument
  --> tests/ui/with_enum_no_ident.rs:12:6
   |
12 |     .with_enum());
   |      ^^^^^^^^^
